# serdeb

./: Cargo.toml
binserde/: Cargo.toml
binserde/src/: error.rs  lib.rs
binserde/tests/: base.rs  serde_derive.rs
binserde_derive/: Cargo.toml
binserde_derive/src/: decoder.rs  encoder.rs  lib.rs
serde_derive/: Cargo.toml
serde_derive/src/: bitfield.rs  encoder.rs  lib.rs  normal.rs
serde_lib/: Cargo.toml
serde_lib/src/: lib.rs
serde_main/: Cargo.toml
serde_main/src/: main.rs
serdeb/: Cargo.toml
serdeb/src/: decode.rs  encode.rs  lib.rs
serdeb/tests/: base.rs  serde_derive.rs
serdeb_derive/: Cargo.toml
serdeb_derive/src/: decoder.rs  encoder.rs  lib.rs
