[package]
name = "serdeb"
version = "0.1.0"
edition = "2024"

[features]
default = []
derive = []

[dependencies]
bytes = "1"
memchr = "2.7"
thiserror = "2"

serdeb_derive = { path = "../serdeb_derive" }

[[test]]
name = "base"
path = "tests/base.rs"

[[test]]
name = "serde_derive"
path = "tests/serde_derive.rs"
required-features = ["derive"]